Also load the patchwork library.

--- a/vignettes/GenomicFeatures.Rmd
+++ b/vignettes/GenomicFeatures.Rmd
@@ -24,6 +24,7 @@ different objects are prepared.
 library('OikScrambling')   |> suppressPackageStartupMessages()
 library('GenomicFeatures') |> suppressPackageStartupMessages()
 library('heatmaps')        |> suppressPackageStartupMessages()
+library('patchwork')       |> suppressPackageStartupMessages()
 genomes     <- OikScrambling:::loadAllGenomes(compat = F)
 # Cannot use Knitr cache as long as "annot" objects are used.
 annots      <- OikScrambling:::loadAllAnnotations()   |> suppressWarnings()
