Correction unaligned → unmapped

--- a/vignettes/GenomicFeatures.Rmd
+++ b/vignettes/GenomicFeatures.Rmd
@@ -667,7 +667,7 @@ feature_coverage_on_genes <- {
 
 p_gene_int_scrambling <- rbind(
   feature_coverage_on_genes(gbs$Oki_Osa[gbs$Oki_Osa$nonCoa], "01_isolated"),
-  feature_coverage_on_genes(unal$Oki_Osa[unal$Oki_Osa$nonCoa], "02_unaligned"),
+  feature_coverage_on_genes(unal$Oki_Osa[unal$Oki_Osa$nonCoa], "02_unmapped"),
   feature_coverage_on_genes(gbs$Oki_Osa[!gbs$Oki_Osa$nonCoa], "03_colinear_aln"),
   feature_coverage_on_genes(bri$Oki_Osa, "04_bridge"),
   feature_coverage_on_genes(coa$Oki_Osa[!coa$Oki_Osa$nonCoa], "05_colinear_reg")
@@ -680,7 +680,7 @@ feature_coverage_on_genes_outside <- {
 
 p_gene_ext_scrambling <- rbind(
   feature_coverage_on_genes_outside(gbs$Oki_Osa[gbs$Oki_Osa$nonCoa], "01_isolated"),
-  feature_coverage_on_genes_outside(unal$Oki_Osa[unal$Oki_Osa$nonCoa], "02_unaligned"),
+  feature_coverage_on_genes_outside(unal$Oki_Osa[unal$Oki_Osa$nonCoa], "02_unmapped"),
   feature_coverage_on_genes_outside(gbs$Oki_Osa[!gbs$Oki_Osa$nonCoa], "03_colinear_aln"),
   feature_coverage_on_genes_outside(bri$Oki_Osa, "04_bridge"),
   feature_coverage_on_genes_outside(coa$Oki_Osa[!coa$Oki_Osa$nonCoa], "05_colinear_reg")
